add favicon to maps side

--- a/maps/public/index.html
+++ b/maps/public/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
+  <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
+  <link rel="icon" href="/favicon.png" type="image/x-icon">
+
   <title>Afet Bilgi Maps</title>
 </head>
 
