--- a/admin-panel-fe/public/index.html
+++ b/admin-panel-fe/public/index.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
   <link rel="icon" href="/favicon.png" type="image/x-icon">
 
-  <title>Afet Bilgi Admin Panel</title>
+  <title>Rowless Admin Panel</title>
 </head>
 
 <body>
